--- a/cir/pom.xml
+++ b/cir/pom.xml
@@ -31,5 +31,11 @@
 	    <artifactId>jcabi-xml</artifactId>
 	    <version>0.20.1</version>
 	</dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.2</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
